@@ -1,3 +1,8 @@
+2019-01-08  Shiro Kawai  <shiro@acm.org>
+
+	* dbd_mysql.c (mysql_init_param): Allow u8vector as param to
+	  pass blob value.
+
 2018-12-24  Shiro Kawai <shiro@acm.org>
 
 	* Release 0.4 - This is a version that requires 0.9.7 Gauche.
